Fix alignment on clues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -307,8 +307,9 @@ $clueShadow: -5px 0px 10px 8px rgba(0, 0, 0, 0.3);
 
 .clueLeft .text,
 .clueRight .text {
-  padding: 5px;
+  padding: 10px;
   padding-top: 40px;
+  text-align: center;
 }
 
 .clueHole {
